--- a/package.json
+++ b/package.json
@@ -8,13 +8,27 @@
 	"private": true,
 	"version": "0.1.0",
 	"type": "module",
+	"files": [
+		"dist"
+	],
+	"main": "dist/index.cjs",
+	"module": "dist/index.js",
+	"types": "dist/lib/index.d.ts",
+	"exports": {
+		".": {
+			"import": "./dist/index.js",
+			"require": "./dist/index.cjs",
+			"types": "./dist/lib/index.d.ts"
+		}
+	},
 	"scripts": {
 		"dev": "vite",
-		"build": "tsc && vite build",
+		"build": "tsc --p ./tsconfig.build.json && vite build",
 		"lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
 		"preview": "vite preview"
 	},
 	"devDependencies": {
+		"@types/node": "^20.11.27",
 		"@types/react": "^18.2.56",
 		"@types/react-dom": "^18.2.19",
 		"@typescript-eslint/eslint-plugin": "^6.21.0",
@@ -34,15 +48,16 @@
 		"react-dom": "^18.2.0",
 		"tailwindcss": "^3.4.1",
 		"typescript": "^5.4.2",
-		"vite": "^5.1.4"
+		"vite": "^5.1.4",
+		"vite-plugin-dts": "^3.7.3"
 	},
 	"peerDependencies": {
 		"react": ">=18.0.0",
 		"react-dom": ">=18.0.0"
 	},
 	"optionalDependencies": {
-		"tailwindcss": "^3.4.1",
 		"autoprefixer": "^10.4.18",
-		"postcss": "^8.4.35"
+		"postcss": "^8.4.35",
+		"tailwindcss": "^3.4.1"
 	}
 }
